# tekmate

./: .gitignore  .landscape.yaml  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py
assets/global/: item_data.json  player.xcf
assets/images/: prolog.xcf
assets/items/: door.xcf  key.xcf  letter_no_paperclip.xcf  letter_under_door.xcf  paperclip.xcf
assets/maps/: example.tmx  objecttypes.xml
assets/player/: Thumbs.db
tekmate/: __main__.py  configuration.py  game.py  item.py  items.py  messages.py  pathfinding.py  scenes.py  ui.py
tekmate/draw/: messages.py  scenes.py  ui.py
tests/: test_configuration.py  test_game.py  test_item.py  test_pathfining.py  test_scenes.py  test_ui.py
