[nosetests]
detailed-errors=1
with-coverage=1
cover-tests=1
cover-inclusive=1
cover-branches=1
cover-erase=1
cover-min-percentage=100
cover-package=tekmate.configuration, tekmate.game, tekmate.items, tekmate.pathfinding

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_sphinx]
upload-dir = doc/build/html

[metadata]
description-file = README.md